# Evremap-GUI

./: README.md  package-lock.json  package.json
src/: App copy 2.tsx  App copy.tsx  App.tsx  DeviceConfigComponent.tsx  DeviceNamePhys.tsx  DropdownMenu2.css  DropdownMenu2.tsx  DualroleSection.tsx  EvremapGUIComp3.tsx  RemapSection.tsx  TOMLPreview.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main copy.rs  main.rs
