[package]
name = "Evremap-GUI"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
#tokio = { version = "1", features = ["full"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#toml = "0.5"
#regex = "1.4"
#tauri = "1.0"
#tauri-api = "0.7.6"
#tauri-api-fs = "0.7.6"
serde = { version="1.0", features= ["derive"] }
serde_json = "1.0"
toml = "0.5"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
